<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    
    <!-- First Row: First name -->
    
     <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text" 
        android:hint="@string/prename"
        android:imeOptions="actionNext">

        <requestFocus />
    </EditText>

     <!-- Second Row: Name-->   
    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
    	android:imeOptions="actionNext"/>
    
     <!-- Fourth Row: Date of birth -->      
    <EditText
         android:id="@+id/editText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText2"
         android:layout_alignLeft="@+id/editText2"
         android:ems="10"
       	 android:hint="@string/dob"
         android:inputType="date"/> 
    
    <!-- Third Row: Gender -->
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:ems="10"
        android:spinnerMode="dialog"
        android:entries="@array/gender_array"
        android:prompt="@string/gender" />
   
    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignParentBottom="true"

        android:text="@string/createclient_savebutton" />
    
    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/button2"
        android:layout_alignParentBottom="true"
        android:text="@string/createclient_resetbutton" />

    

</RelativeLayout>

