<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   
   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10pt" 
    android:paddingBottom="10pt">
	    <TextView
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:textSize="10pt" />
	    <TextView
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/prename"
	        android:textSize="10pt" />
	    <TextView
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/dob"
	        android:textSize="10pt" />
    </LinearLayout>
    
    <ListView
        android:id="@+id/clientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#000"
        android:headerDividersEnabled="true"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" />
   
</LinearLayout>
    

